--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,3 +64,13 @@
   --spacing-sidebar: 15rem;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
