--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,15 +5,13 @@
 @layer base {
   :root {
     /* Background Colors */
-    --bg: #ffffff;
-    --header-bg: #f3f5f8;
+    --bg: oklch(1 0.0025 250);
+    --header-bg: oklch(0.95 0.0025 250);
 
     /* Typography Colors */
-    --content: #69707a;
-    --content-primary: #1f2937;
-    --content-secondary: #374151;
-    --content-muted: #6b7280;
-    --content-light: #9ca3af;
+    --content-main: oklch(0.05 0.025 250);
+    --content: oklch(0.30 0.025 250);
+    --content-muted: oklch(0.45 0.025 250);
     
     /* Border Colors */
     --border: #e5e7eb;
@@ -21,20 +19,17 @@
     
     /* Background Variants */
     --bg-hover: #f9fafb;
-    --bg-secondary: #f3f4f6;
   }
 
   .dark {
     /* Background Colors */
-    --bg: #222324;
-    --header-bg: #292929;
+    --bg: oklch(0.25 0.0025 250);
+    --header-bg: oklch(0.30 0.0025 250);
 
     /* Typography Colors */
-    --content: #aaaaaa;
-    --content-primary: #ffffff;
-    --content-secondary: #d1d5db;
-    --content-muted: #9ca3af;
-    --content-light: #6b7280;
+    --content-main: oklch(0.95 0.025 250);
+    --content: oklch(0.75 0.025 250);
+    --content-muted: oklch(0.60 0.025 250);
     
     /* Border Colors */
     --border: #374151;
@@ -42,26 +37,19 @@
     
     /* Background Variants */
     --bg-hover: #374151;
-    --bg-secondary: #1f2937;
   }
 
   html,
   body,
   div#root {
-    min-height: 100vh;
-    min-width: 100vw;
+    min-height: calc(100vh-16px);
+    min-width: calc(100vw-16px);
     margin: 0;
     padding: 0;
   }
 }
 
 @theme {
-  /* Background Colors */
-  --color-background: var(--bg);
-  --color-header: var(--header-bg);
-  --color-bg-hover: var(--bg-hover);
-  --color-bg-secondary: var(--bg-secondary);
-
   /* Primary Color Scale */
   --color-primary-50: #fff1f2;
   --color-primary-100: #ffe1e3;
@@ -74,25 +62,28 @@
   --color-primary-800: #9e161e;
   --color-primary-900: #83191f;
 
+  /* Spacing */
+  --spacing-sidebar: 15rem;
+}
+
+@theme inline {
+  /* Background Colors */
+  --color-background: var(--bg);
+  --color-header: var(--header-bg);
+  --color-bg-hover: var(--bg-hover);
+
   /* Primary Color Variants */
   --color-primary: var(--color-primary-500);
   --color-primary-muted: var(--color-primary-500)/70;
-  --color-primary-subtle: var(--color-primary-500)/50;
-  --color-primary-faint: var(--color-primary-500)/30;
 
   /* Typography Colors */
+  --color-content-main: var(--content-main);
   --color-content: var(--content);
-  --color-content-primary: var(--content-primary);
-  --color-content-secondary: var(--content-secondary);
   --color-content-muted: var(--content-muted);
-  --color-content-light: var(--content-light);
 
   /* Border Colors */
   --color-border: var(--border);
   --color-border-hover: var(--border-hover);
-
-  /* Spacing */
-  --spacing-sidebar: 15rem;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
